# AlgorithmRitual

./: .gitignore  CMakeLists.txt  README.md  fix_deadlock.sh  publish_github.sh  start_ritual.sh
.github/workflows/: build-windows.yml
AlgorithmRitual.app/Contents/: Info.plist
include/:  SortAlgorithm.h  SortAlgorithm.h  Visualizer.h
src/: SortAlgorithm.cpp  Visualizer.cpp  main.cpp
